# nessie

./: .gitignore  Cargo.toml  shell.nix
.cargo/: config.toml
sql/: init.sql
src/: chain.rs  chain_inserter.rs  clone_in.rs  counter.rs  lib.rs  line_processor.rs  main.rs  types.rs  unigram.rs
