[package]
name = "nessie"
version = "0.1.0"
authors = [ "joe.kaushal@gmail.com" ]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
deunicode = "1.3.0"
regex = "1.5.4"
bytesize = "1.0.1"

smartstring = { version = "0.2.7", features = [ "serde" ] }
hashbrown = { version = "0.11.2", features = [ "serde", "nightly" ] }

serde = { version = "1.0", features = [ "derive" ] }

crossbeam = "0.8.1"

[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = [ "sync" ]
