[package]
name = "nessie"
version = "0.1.0"
authors = [ "joe.kaushal@gmail.com" ]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
deunicode = "1.3.0"
regex = "1.5.4"
bytesize = "1.0.1"

smartstring = { version = "0.2.7", features = [ "serde" ] }
hashbrown = { version = "0.11.2", features = [ "serde", "nightly" ] }
serde = { version = "1.0", features = [ "derive" ] }

crossbeam = "0.8.1"

postgres = "0.19.1"
postgres-types = { version = "0.2.1", features = [ "derive" ] }
postgres-protocol = "0.6.1"

bytes = "1.0.1"
