[package]
name = "nessie"
version = "0.1.0"
authors = [ "joe.kaushal@gmail.com" ]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
deunicode = "1.3.0"
regex = "1.5.4"
bytesize = "1.0.1"
derive_more = "0.99.16"

smartstring = { version = "0.2.7", features = [ "serde" ] }
hashbrown = { version = "0.11.2", features = [ "serde", "nightly" ] }

crossbeam = "0.8.1"

postgres = "0.19.1"
postgres-types = { version = "0.2.1", features = [ "derive" ] }
bytes = "1.0.1"

log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
